<resources>
    <string name="app_name">Artemis Mobile</string>

    <string name="message_wrong">Cos poszlo nie tak</string>
    <string name="message_progress">W toku</string>
    <string name="cancel">Anuluj</string>
    <string name="done">Zrobione</string>
    <!-- Strings related to login and register-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="error_field_required">To wymagane pole</string>
    <string name="error_invalid_password">Hasło jest nie dozwolone</string>

    <string name="title_activity_main">MainActivity</string>


    <!-- Strings related to login -->
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="error_invalid_email">Ten adres email jest nie dozwolony</string>
    <string name="error_incorrect_password">Hasło jest nie poprawne</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Zapomniane hasło?</string>
    <string name="action_sign_in_fb">Zaloguj sie przez fb</string>
    <string name="action_sign_in_email">Zaloguj sie przez email</string>
    <string name="create_account">Rejestracja</string>

    <!-- String related to register -->
    <string name="prompt_login">Login</string>
    <string name="prompt_name">Imię</string>
    <string name="prompt_surname">Nazwisko</string>
    <string name="prompt_re_password">Potwierdź Hasło</string>
    <string name="prompt_accept_terms">Akceptuję regulamin</string>
    <string name="prompt_create_account">Zarejestruj</string>
    <string name="prompt_terms">Regulamin</string>
    <string name="prompt_back">Powrót</string>
    <string name="prompt_sign_up_in">W trakcie rejestracji…</string>
    <string name="prompt_pickup_date">Wybierz Datę</string>
    <string name="prompt_gender">Płeć</string>
    <string name="prompt_gender_woman">Kobieta</string>
    <string name="prompt_gender_man">Mężczyzna</string>
    <string name="prompt_register_success">Rejestracja udana</string>
    <string name="error_repassword_password_not_same">Hasło i potwierdzenie hasła nie są identyczne</string>
    <string name="error_user_exist">Użytkownik już isttnieje</string>
    <string name="error_not_accepted_terms">Wymagane jest zakceptowanie regulaminu</string>
    <string name="error_invalid_characters">Zawiera nie dozwolone znaki</string>
    <string name="error_invalid_login">Niedozwolony login</string>
    <string name="error_used_login">Login już wykorzystywany</string>
    <string name="error_used_email">Email już wykorzystywany</string>
    <string name="error_no_network_available">Sieć nie dostępna</string>
    <string name="error_unknown">Nieznany błąd</string>
    <string name="error_work">Błąd, ale zarejestrowano</string>

    <!--Terms -->
    <string name="terms_text">
        1.	O naszej stronie internetowej się nie mówi.
        2.	O naszej aplikacji mobilnej się nie mówi.
        3.	Ktoś ma dość, słabnie, pęka, koniec dramy.
        4.	Rozmawia tylko dwóch (w czacie).
        5.	Tylko jedna drama naraz.
        6.	Bez notatek, bez Google’a.
        7.	Dramy trwają tak długo, ile trzeba.
        8.	Jeśli to jest twoja pierwsza noc na naszej stronie – musisz brać udział w dramie.
    </string>

    <!-- String related to mainActivity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="log_out">Wyloguj</string>
    <string name="prompt_settings">Ustawienia</string>
    <string name="prompt_settings_display">Ustawienia wyświetlania</string>
    <string name="prompt_language">Język</string>
    <string name="prompt_languages">Języki</string>
    <string name="profile">Profil</string>
    <string name="gallery">Galeria</string>
    <string name="users">Ludzie</string>
    <string name="statute">Regulamin</string>

    <!-- String related to posts -->
    <string name="prompt_report">Zgłoś</string>
    <string name="prompt_comment">Skomentuj</string>
    <string name="prompt_successful_comment">Dodano komentarz</string>
    <string name="prompt_new_comment_hint">Napisz komentarz…</string>
    <string name="prompt_delete">Usun</string>

    <!-- Strings related to sending posts -->
    <string name="send">Wyslij</string>
    <string name="add_photo">Dodaj zdjecie</string>
    <string name="write_here">Pisz tutaj…</string>
    <string name="create_photo">Zrob zdjecie</string>

    <!-- Strings related to notifications -->
    <string name="read">Przeczytane</string>
    <string name="not_read">Nie Przeczytane</string>
    <string name="prompt_accept">Zakceptuj</string>
    <string name="prompt_reject">Odrzuć</string>

    <string name="prompt_notification_desc_invitation">Zaproszenie do znajomych.</string>
    <string name="prompt_notification_desc_accept">Przyjęto do znajomych.</string>
    <string name="prompt_notification_desc_reject">Odrzuconow zaproszenie do znajomych.</string>
    <string name="prompt_notification_desc_end">Zakończenie znajomości.</string>
    <string name="prompt_notification_desc_message">Nowa wiadomość.</string>
    <string name="prompt_notification_desc_post">Skomentował twój post.</string>

    <!-- Strings related to view users -->
    <string name="no_data_available">Nie ma danych</string>
    <string name="prompt_delete_friend">Usuń</string>
    <string name="prompt_view_profile">Pokaż profil</string>
    <string name="search">Szukaj</string>
    <string name="name">Imie</string>
    <string name="surname">Nazwisko</string>


    <!-- Strings related to invite-->
    <string name="people">Ludzie</string>
    <string name="inviteSend">Zaproszenie zostalo wyslane</string>
    <string name="invite">Zapros</string>
    <string name="friends">Znajomi</string>


    <string name="prompt_deleted_friend">Usunieto znajomego</string>

    <!-- Strings related to profile-->
    <string name="prompt_birthday">Data urodzenia</string>
    <string name="prompt_friend_list">Lista znajomych</string>
    <string name="prompt_change_picture">Zmien profilowe</string>
    <string name="prompt_edit">Edytuj</string>
    <string name="prompt_message">Czat</string>
    <string name="prompt_new_message">Wyslij</string>
    <string name="sender">Nadawca</string>

    <!-- Strings related to edit profile-->
    <string name="prompt_success_update">Zaktualizowano dane</string>
    <string name="action_updating">Aktualizowanie danych</string>

    <!-- Strings related to violation-->
    <string name="description">Opis</string>
    <string name="posts_violation">Naruszenia postow</string>
    <string name="comments_violation">Naruszenia komentarzy</string>
    <string name="posts">Posty</string>
    <string name="comments">Komentarze</string>

    <!-- String related to languages -->
    <string name="polish">polski</string>
    <string name="english">english</string>

    <!--String relate to chat -->
    <string name="prompt_new_message_hint">Napisz nową wiadomość…</string>

</resources>
